--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "concurrently -n SERVER,CLIENT -c auto \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "nodemon src/server.js",
+    "dev:client": "npm --prefix client run dev",
+
     "start": "node src/server.js",
+    "start:client": "npm --prefix client run preview",
+
+    "build": "npm --prefix client run build",
+    "build:client": "npm --prefix client run build",
+
     "migrate": "prisma migrate dev",
     "studio": "prisma studio"
   },
@@ -19,6 +27,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.4",
     "prisma": "^6.0.0"
   }
