--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@vitejs/plugin-react": "^4.3.2",
     "postcss": "^8.5.6",
