added Backups merge & import

--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "haushalt-mvcs",
-  "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
+  "type": "module",
+  "workspaces": ["client", "server"],
   "scripts": {
-    "dev": "concurrently -n SERVER,CLIENT -c auto \"npm -w server run dev\" \"npm -w client run dev\"",
-    "dev:server": "npm -w server run dev",
-    "dev:client": "npm -w client run dev",
+    "dev": "concurrently -k -n server,client \"npm run -w server dev\" \"npm run -w client dev\"",
+    "dev:server": "npm run -w server dev",
+    "dev:client": "npm run -w client dev",
 
-    "start": "npm -w server run start",
+    "build": "npm run -w client build",
+    "preview": "npm run -w client preview",
 
-    "build": "npm -w client run build",
-    "preview": "npm -w client run preview",
+    "prisma:generate": "npm run -w server prisma:generate",
+    "prisma:migrate": "npm run -w server prisma:migrate",
+    "prisma:studio": "npm run -w server prisma:studio",
 
-    "prisma:generate": "npm -w server run prisma:generate",
-    "prisma:migrate": "npm -w server run prisma:migrate",
-    "prisma:studio": "npm -w server run prisma:studio"
+    "postinstall": "npm run prisma:generate"
   },
   "devDependencies": {
     "concurrently": "^9.1.0"
