--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
 
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:generate": "prisma generate --schema prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema prisma/schema.prisma",
+    "prisma:studio": "prisma studio --schema prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
